--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,22 +9,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v4
-      -
-        name: Login to Docker Hub
+      - uses: actions/checkout@v4
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      -
-        name: Build and push
+      - uses: docker/setup-buildx-action@v3
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+          context: .  # Build context (current directory)
+          push: true   # Push the image to Docker Hub
+          tags: ${{ secrets.DOCKER_USERNAME }}/{{ github.event.repository.name }}:latest  # Image tag using repository name
